LIN-4915/LIN-4916 Make playground more deterministic
Change-Id: Id6990d5e809ca52cb42be15842ec6c028565822c